# mermaidView

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
docs/: API.md  ARCHITECTURE.md  USAGE.md
src/mermaid_view/: __init__.py
src/mermaid_view/application/: __init__.py
src/mermaid_view/application/commands/: __init__.py  render_diagram.py
src/mermaid_view/application/dtos/: __init__.py  diagram_dto.py
src/mermaid_view/application/handlers/: __init__.py  diagram_handler.py
src/mermaid_view/application/queries/: __init__.py  get_diagram.py
src/mermaid_view/domain/: __init__.py  exceptions.py
src/mermaid_view/domain/entities/: __init__.py  diagram.py
src/mermaid_view/domain/ports/: __init__.py  renderer.py  storage.py
src/mermaid_view/domain/services/: __init__.py  diagram_service.py
src/mermaid_view/domain/value_objects/: __init__.py  diagram_type.py  mermaid_code.py  render_config.py
src/mermaid_view/infrastructure/: __init__.py  config.py
src/mermaid_view/infrastructure/adapters/: __init__.py  file_storage.py  mermaid_ink_renderer.py  playwright_renderer.py
src/mermaid_view/infrastructure/web/: __init__.py  app.py  routes.py
src/mermaid_view/infrastructure/web/templates/: index.html  style-custom.css  style.B3_dxiAo.css
src/mermaid_view/presentation/: __init__.py  cli.py
tests/: __init__.py  conftest.py
tests/integration/: test_renderers.py
tests/unit/application/: test_handlers.py
tests/unit/domain/: test_diagram.py
